# plato-room-configs

./: AGENT.md  CONFIGURATION_GUIDE.md  Cargo.toml  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md
configs/factory/: factory.manifest.json  hvac.room.json  production-line.room.json  warehouse.room.json
configs/fishing-boat/: backdeck.room.json  bilge.room.json  boat.manifest.json  crows-nest.room.json  engine-room.room.json  galley.room.json  wheelhouse.room.json
configs/game-world/: dungeon.room.json  forest.room.json  game.manifest.json  tavern.room.json
configs/server-rack/: network-switch.room.json  pdu.room.json  rack-unit.room.json  rack.manifest.json
configs/smart-home/: garage.room.json  home.manifest.json  kitchen.room.json  living-room.room.json
examples/: print_room.rs  validate_all.rs
memory/: JOURNAL.md
schema/: alarm.schema.json  manifest.schema.json  room.schema.json  sensor.schema.json
src/: lib.rs  loader.rs  manifest.rs  validator.rs
tests/: test_all_configs.rs  test_loader.rs  test_manifest.rs  test_validator.rs
