[package]
name = "plato-room-configs"
version = "0.1.0"
edition = "2021"
description = "Room configuration system for PlatoEngine — load, validate, and manage sensor/actuator/alarm configs for physical spaces"
license = "MIT"
repository = "https://github.com/SuperInstance/plato-room-configs"
keywords = ["iot", "plato", "sensors", "configuration", "automation"]
categories = ["config", "embedded", "hardware-support"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
thiserror = "1"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1"
